<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.saikeerthana.saikeerthijp.DetailsActivity">

    <EditText
        android:id="@+id/etuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="477dp"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="81dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Username"
        android:labelFor="@id/etuser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="401dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:inputType="number|phone"
        android:text="@string/phonenumber"
        android:labelFor="@id/etphone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etuser" />

    <EditText
        android:id="@+id/ettime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="313dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/starttime"
        android:labelFor="@id/ettime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etphone" />

    <Button
        android:id="@+id/btnissue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="136dp"
        android:layout_marginEnd="162dp"
        android:layout_marginStart="161dp"
        android:text="@string/issue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="51dp"
        android:layout_marginEnd="99dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/useraddress"
        android:labelFor="@id/etaddress"
        app:layout_constraintBottom_toTopOf="@+id/btnissue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ettime" />
</android.support.constraint.ConstraintLayout>
